# LDSR-S2-Slurm

./: .gitignore  README.md  pyproject.toml
configs/model/: opensr_ldsrs2_v1.yaml
configs/runtime/: a100.yaml  default.yaml
docs/: architecture.md  operations.md
scripts/: slurm_task_entrypoint.sh
src/ldsrs2_launcher/: __init__.py  cli.py
src/ldsrs2_launcher/config/: loader.py  schema.py
src/ldsrs2_launcher/data/: __init__.py  staging.py
src/ldsrs2_launcher/domain/: __init__.py  manifests.py  raster.py
src/ldsrs2_launcher/model/: inference.py
src/ldsrs2_launcher/observability/: __init__.py  logging.py  metadata.py
src/ldsrs2_launcher/pipeline/: run_task.py  submit_grid.py  submit_patch.py
src/ldsrs2_launcher/slurm/: __init__.py  spec.py  submit.py
tests/integration/: __init__.py  test_cli.py
tests/unit/: __init__.py  test_config.py  test_patching.py  test_slurm.py  test_staging_retry.py
